2023-12-16  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.4.3
    * Update tclconfig files

2023-09-20  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2023-08-01  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2022-12-10  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2022-10-09  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2022-08-17  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2022-06-23  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2021-10-14  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.4.2 (checkpoint version)
    * generic/tclmdb.c: Improve code to create list

2021-04-10  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2021-03-16  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2021-02-27  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Fix typo.

2021-02-11  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2020-10-27  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2020-09-03  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2020-04-28  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2020-03-03  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.4.1 (checkpoint version)

2020-01-29  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2019-04-19  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2019-02-19  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2019-02-01  Danilo Chang  <ray2501@gmail.com>

    * Makefile.in: Remove workaround for glibc.
      It is not necessary for current LMDB source code.
