@@ -1,3 +1,7 @@
+2024-01-20  Danilo Chang  <ray2501@gmail.com>
+
+    * generic/mdb.c: Update LMDB source code.
+
 2023-12-16  Danilo Chang  <ray2501@gmail.com>
 
     * Setup version to v0.4.3
